# wapi

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  README_zh-CN.md  README_zh-TW.md  pyproject.toml
wapi/: __init__.py  cli.py
wapi/config/: __init__.py  loader.py
wapi/core/: __init__.py  browser.py  contact.py  scheduler.py  sender.py
wapi/tests/: test_contact.py
